RESOLVED FIXED273255
Creating ImageBitmap out of WebGPU OffscreenCanvas context crashes
https://bugs.webkit.org/show_bug.cgi?id=273255
Summary Creating ImageBitmap out of WebGPU OffscreenCanvas context crashes
Kimmo Kinnunen
Reported 2024-04-25 11:00:43 PDT
Creating ImageBitmap out of WebGPU OffscreenCanvas context crashes
Attachments
Kimmo Kinnunen
Comment 1 2024-04-25 12:06:01 PDT
Kimmo Kinnunen
Comment 2 2024-04-25 12:56:48 PDT
EWS
Comment 3 2024-04-26 14:45:08 PDT
Committed 278058@main (f6c16b9ea729): <https://commits.webkit.org/278058@main> Reviewed commits have been landed. Closing PR #27756 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.