Creating ImageBitmap out of WebGPU OffscreenCanvas context crashes https://bugs.webkit.org/show_bug.cgi?id=273255 rdar://126761479

Reviewed by Mike Wyrzykowski.

Transfer the CGImage malloc buffer ownership to the CGDataProvider.

* LayoutTests/fast/webgpu/image-bitmap-no-crash-expected.html: Added.
* LayoutTests/fast/webgpu/image-bitmap-no-crash.html: Added.
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
(WebGPU::PresentationContextIOSurface::getTextureAsNativeImage):

Canonical link: https://commits.webkit.org/278058@main